Kubernetes/Administration of the Kubernetes cluster/1.5/src/1nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy-front
  namespace: deploy-5
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.1
          ports:
          - protocol: TCP
            containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: deploy-5
spec:
  selector:
    app: frontend
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
